// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component tests renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    dispatch={[Function]}
    email=""
    loggedIn={false}
    watches={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <styled.div>
        <Header
          email=""
          loggedIn={false}
        />
        <Welcome />
        
        <Connect(AddWatchModal)
          close={[Function]}
          open={false}
        />
      </styled.div>,
      "className": "App",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Header
            email=""
            loggedIn={false}
          />,
          <Welcome />,
          "",
          <Connect(AddWatchModal)
            close={[Function]}
            open={false}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "email": "",
            "loggedIn": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "",
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "close": [Function],
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <styled.div>
          <Header
            email=""
            loggedIn={false}
          />
          <Welcome />
          
          <Connect(AddWatchModal)
            close={[Function]}
            open={false}
          />
        </styled.div>,
        "className": "App",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Header
              email=""
              loggedIn={false}
            />,
            <Welcome />,
            "",
            <Connect(AddWatchModal)
              close={[Function]}
              open={false}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "email": "",
              "loggedIn": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "",
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "close": [Function],
              "open": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App Component tests renders without crashing logged in with no watches 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    dispatch={[Function]}
    email=""
    loggedIn={true}
    watches={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <styled.div>
        <Header
          email=""
          loggedIn={true}
        />
        <styled.div>
          <styled.h2
            data-text="Please wait while we gather your sets..."
          >
            Please wait while we gather your sets...
          </styled.h2>
          
          <Instructions />
        </styled.div>
        <AddWatchButton
          openModal={[Function]}
        />
        <Connect(AddWatchModal)
          close={[Function]}
          open={false}
        />
      </styled.div>,
      "className": "App",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Header
            email=""
            loggedIn={true}
          />,
          <styled.div>
            <styled.h2
              data-text="Please wait while we gather your sets..."
            >
              Please wait while we gather your sets...
            </styled.h2>
            
            <Instructions />
          </styled.div>,
          <AddWatchButton
            openModal={[Function]}
          />,
          <Connect(AddWatchModal)
            close={[Function]}
            open={false}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "email": "",
            "loggedIn": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.h2
                data-text="Please wait while we gather your sets..."
              >
                Please wait while we gather your sets...
              </styled.h2>,
              "",
              <Instructions />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": "Please wait while we gather your sets...",
                "data-text": "Please wait while we gather your sets...",
              },
              "ref": null,
              "rendered": "Please wait while we gather your sets...",
              "type": [Function],
            },
            "",
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "openModal": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "close": [Function],
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <styled.div>
          <Header
            email=""
            loggedIn={true}
          />
          <styled.div>
            <styled.h2
              data-text="Please wait while we gather your sets..."
            >
              Please wait while we gather your sets...
            </styled.h2>
            
            <Instructions />
          </styled.div>
          <AddWatchButton
            openModal={[Function]}
          />
          <Connect(AddWatchModal)
            close={[Function]}
            open={false}
          />
        </styled.div>,
        "className": "App",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Header
              email=""
              loggedIn={true}
            />,
            <styled.div>
              <styled.h2
                data-text="Please wait while we gather your sets..."
              >
                Please wait while we gather your sets...
              </styled.h2>
              
              <Instructions />
            </styled.div>,
            <AddWatchButton
              openModal={[Function]}
            />,
            <Connect(AddWatchModal)
              close={[Function]}
              open={false}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "email": "",
              "loggedIn": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.h2
                  data-text="Please wait while we gather your sets..."
                >
                  Please wait while we gather your sets...
                </styled.h2>,
                "",
                <Instructions />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "class",
                "props": Object {
                  "children": "Please wait while we gather your sets...",
                  "data-text": "Please wait while we gather your sets...",
                },
                "ref": null,
                "rendered": "Please wait while we gather your sets...",
                "type": [Function],
              },
              "",
              Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "openModal": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "close": [Function],
              "open": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App Component tests renders without crashing with no profile in localstorage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    dispatch={[Function]}
    email=""
    loggedIn={false}
    watches={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <styled.div>
        <Header
          email=""
          loggedIn={false}
        />
        <Welcome />
        
        <Connect(AddWatchModal)
          close={[Function]}
          open={false}
        />
      </styled.div>,
      "className": "App",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Header
            email=""
            loggedIn={false}
          />,
          <Welcome />,
          "",
          <Connect(AddWatchModal)
            close={[Function]}
            open={false}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "email": "",
            "loggedIn": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "",
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "close": [Function],
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <styled.div>
          <Header
            email=""
            loggedIn={false}
          />
          <Welcome />
          
          <Connect(AddWatchModal)
            close={[Function]}
            open={false}
          />
        </styled.div>,
        "className": "App",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Header
              email=""
              loggedIn={false}
            />,
            <Welcome />,
            "",
            <Connect(AddWatchModal)
              close={[Function]}
              open={false}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "email": "",
              "loggedIn": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "",
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "close": [Function],
              "open": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
